Change structure header navlink

--- a/index.html
+++ b/index.html
@@ -52,25 +52,24 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#home">Trang chủ</a>
+                        <a class="nav-link active" href="index.html">SPA</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#services">Dịch vụ</a>
+                        <a class="nav-link" href="shop.html">MỸ PHẨM</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" href="#" id="perfumeDropdown" role="button"
                             data-bs-toggle="dropdown">
-                            Dịch vụ làm đẹp
+                            NƯỚC HOA
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#tri-mun">Trị mụn y khoa</a></li>
-                            <li><a class="dropdown-item" href="#tam-trang">Tắm trắng & Phun trắng 5in1</a></li>
-                            <li><a class="dropdown-item" href="#cay-collagen">Cấy collagen</a></li>
-                            <li><a class="dropdown-item" href="#phun-xam">Phun xăm dịch vụ</a></li>
+                            <li><a class="dropdown-item" href="nuoc-hoa-nam.html">Nước hoa nam</a></li>
+                            <li><a class="dropdown-item" href="nuoc-hoa-nu.html">Nước hoa nữ</a></li>
+                            <li><a class="dropdown-item" href="nuoc-hoa-unisex.html">Nước hoa unisex</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact">Liên hệ</a>
+                        <a class="nav-link" href="#contact">LIÊN HỆ</a>
                     </li>
                 </ul>
                 <div class="d-flex">
