--- a/shop.html
+++ b/shop.html
@@ -51,31 +51,24 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Trang chủ</a>
+                        <a class="nav-link" href="index.html">SPA</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="shop.html">Cửa hàng</a>
+                        <a class="nav-link active" href="shop.html">MỸ PHẨM</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="productsDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" href="#" id="perfumeDropdown" role="button"
                             data-bs-toggle="dropdown">
-                            Sản phẩm
+                            NƯỚC HOA
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="nuoc-hoa-nam.html" target="_blank">Nước hoa nam</a></li>
-                            <li><a class="dropdown-item" href="nuoc-hoa-nu.html" target="_blank">Nước hoa nữ</a></li>
-                            <li><a class="dropdown-item" href="nuoc-hoa-unisex.html" target="_blank">Nước hoa unisex</a>
-                            </li>
+                            <li><a class="dropdown-item" href="nuoc-hoa-nam.html">Nước hoa nam</a></li>
+                            <li><a class="dropdown-item" href="nuoc-hoa-nu.html">Nước hoa nữ</a></li>
+                            <li><a class="dropdown-item" href="nuoc-hoa-unisex.html">Nước hoa unisex</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#brands">Thương hiệu</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html#about">Giới thiệu</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html#contact">Liên hệ</a>
+                        <a class="nav-link" href="index.html#contact">LIÊN HỆ</a>
                     </li>
                 </ul>
                 <div class="d-flex">
