change form newsletter-section (update 24/09/2025)

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     </li>
                 </ul>
                 <div class="d-flex">
-                    <a href="#consultation" class="btn btn-outline-primary me-2">
+                    <a href="#newsletter" class="btn btn-outline-primary me-2">
                         <i class="fas fa-calendar-check"></i> Đặt lịch
                     </a>
                     <a href="tel:18003333" class="btn btn-outline-primary">
@@ -97,7 +97,7 @@
                         quyền dành cho khách hàng trong khu vực với công nghệ tiên tiến nhất.
                     </p>
                     <div class="d-flex flex-column flex-md-row gap-3">
-                        <a href="#services" class="btn btn-primary btn-lg">🏥 Đặt lịch tư vấn ngay</a>
+                        <a href="#newsletter" class="btn btn-primary btn-lg">🏥 Đặt lịch tư vấn ngay</a>
                         <a href="#about" class="btn btn-outline-light btn-lg">📞 Hotline: 1800.3333</a>
                     </div>
                 </div>
@@ -204,7 +204,7 @@
                                 <h4 class="card-title">Trị Liệu Da Mặt</h4>
                                 <p class="card-text">Trị mụn y khoa, làm sạch, trẻ hóa da với công nghệ tiên tiến nhất
                                     từ Hàn Quốc</p>
-                                <a href="#facial-treatment" class="btn btn-primary">Đặt lịch ngay</a>
+                                <a href="#newsletter" class="btn btn-primary">Đặt lịch ngay</a>
                             </div>
                         </div>
                     </div>
@@ -217,7 +217,7 @@
                                 <h4 class="card-title">Tắm Trắng & Phun Trắng</h4>
                                 <p class="card-text">Công nghệ tắm trắng 5in1 giúp da trắng sáng tự nhiên an toàn hiệu
                                     quả</p>
-                                <a href="#whitening-treatment" class="btn btn-primary">Đặt lịch ngay</a>
+                                <a href="#newsletter" class="btn btn-primary">Đặt lịch ngay</a>
                             </div>
                         </div>
                     </div>
@@ -230,7 +230,7 @@
                                 <h4 class="card-title">Phun Xăm Thẩm Mỹ</h4>
                                 <p class="card-text">Phun xăm chân mày, môi, mí mắt với công nghệ 6D tạo nên vẻ đẹp hoàn
                                     hảo</p>
-                                <a href="#permanent-makeup" class="btn btn-primary">Đặt lịch ngay</a>
+                                <a href="#newsletter" class="btn btn-primary">Đặt lịch ngay</a>
                             </div>
                         </div>
                     </div>
@@ -280,7 +280,8 @@
                                         <h6 class="text-muted mb-1">Trị Liệu Da</h6>
                                         <h5 class="card-title">Trị Mụn Y Khoa DermaPerfecta</h5>
                                         <div class="d-flex justify-content-between align-items-center">
-                                            <button class="btn btn-outline-primary btn-sm">Đặt lịch ngay</button>
+                                            <a href="#newsletter" class="btn btn-outline-primary btn-sm">Đặt lịch
+                                                ngay</a>
                                         </div>
                                     </div>
                                 </div>
@@ -298,7 +299,8 @@
                                         <h6 class="text-muted mb-1">Tắm Trắng</h6>
                                         <h5 class="card-title">Tắm Trắng & Phun Trắng 5in1</h5>
                                         <div class="d-flex justify-content-between align-items-center">
-                                            <button class="btn btn-outline-primary btn-sm">Đặt lịch ngay</button>
+                                            <a href="#newsletter" class="btn btn-outline-primary btn-sm">Đặt lịch
+                                                ngay</a>
                                         </div>
                                     </div>
                                 </div>
@@ -316,7 +318,8 @@
                                         <h6 class="text-muted mb-1">Phun Xăm</h6>
                                         <h5 class="card-title">Phun Xăm Chân Mày 6D</h5>
                                         <div class="d-flex justify-content-between align-items-center">
-                                            <button class="btn btn-outline-primary btn-sm">Đặt lịch ngay</button>
+                                            <a href="#newsletter" class="btn btn-outline-primary btn-sm">Đặt lịch
+                                                ngay</a>
                                         </div>
                                     </div>
                                 </div>
@@ -503,7 +506,7 @@
                 <div class="col-lg-6">
                     <div class="feature-card text-center">
                         <div
-                            class="feature-icon bg-success text-white rounded-circle mx-auto mb-3 d-flex align-items-center justify-content-center">
+                            class="feature-icon bg-primary text-white rounded-circle mx-auto mb-3 d-flex align-items-center justify-content-center">
                             <i class="fas fa-award fa-2x"></i>
                         </div>
                         <h4>Công nghệ tiên tiến</h4>
@@ -514,7 +517,7 @@
                 <div class="col-lg-6">
                     <div class="feature-card text-center">
                         <div
-                            class="feature-icon bg-warning text-white rounded-circle mx-auto mb-3 d-flex align-items-center justify-content-center">
+                            class="feature-icon bg-primary text-white rounded-circle mx-auto mb-3 d-flex align-items-center justify-content-center">
                             <i class="fas fa-shield-alt fa-2x"></i>
                         </div>
                         <h4>Cam kết chất lượng</h4>
@@ -527,18 +530,51 @@
     </section>
 
     <!-- Newsletter Section -->
-    <section class="newsletter-section py-5 bg-primary text-white">
+    <section id="newsletter" class="newsletter-section py-5 bg-primary text-white">
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-6">
-                    <h3 class="fw-bold mb-2">🎁 ĐĂNG KÝ NHẬN ƯU ĐÃI VIP</h3>
-                    <p class="mb-0">Nhận thông tin khuyến mãi đặc biệt và ưu đãi độc quyền từ Iris Beauty</p>
+            <div class="row">
+                <div class="col-lg-5">
+                    <h3 class="fw-bold mb-3">🎁 ĐĂNG KÝ NHẬN ƯU ĐÃI VIP</h3>
+                    <p class="mb-4">Nhận thông tin khuyến mãi đặc biệt và ưu đãi độc quyền từ Iris Beauty. Đặt lịch tư
+                        vấn miễn phí ngay hôm nay!</p>
                 </div>
-                <div class="col-lg-6">
-                    <div class="input-group">
-                        <input type="email" class="form-control" placeholder="Nhập số điện thoại để nhận ưu đãi">
-                        <button class="btn btn-light" type="button">📞 Đăng ký ngay</button>
-                    </div>
+                <div class="col-lg-7">
+                    <form class="newsletter-form">
+                        <div class="row g-3">
+                            <div class="col-md-6">
+                                <input type="text" class="form-control" placeholder="Tên của bạn" required>
+                            </div>
+                            <div class="col-md-6">
+                                <select class="form-select" required>
+                                    <option value="">Chọn dịch vụ quan tâm</option>
+                                    <option value="tri-mun">Trị mụn y khoa</option>
+                                    <option value="tam-trang">Tắm trắng 5in1</option>
+                                    <option value="cay-collagen">Cấy collagen</option>
+                                    <option value="phun-xam">Phun xăm thẩm mỹ</option>
+                                    <option value="nang-co">Nâng cơ mặt</option>
+                                    <option value="triet-long">Triệt lông laser</option>
+                                    <option value="khac">Dịch vụ khác</option>
+                                </select>
+                            </div>
+                            <div class="col-md-6">
+                                <select class="form-select" required>
+                                    <option value="">Thời gian phù hợp</option>
+                                    <option value="sang">Buổi sáng (8:30-12:00)</option>
+                                    <option value="chieu">Buổi chiều (13:00-17:00)</option>
+                                    <option value="toi">Buổi tối (17:30-19:30)</option>
+                                    <option value="cuoi-tuan">Cuối tuần</option>
+                                </select>
+                            </div>
+                            <div class="col-md-6">
+                                <input type="tel" class="form-control" placeholder="SĐT liên hệ" required>
+                            </div>
+                            <div class="col-12">
+                                <button type="submit" class="btn btn-light btn-lg w-100">
+                                    <i class="fas fa-calendar-check me-2"></i>📞 Đăng ký tư vấn miễn phí
+                                </button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
@@ -570,19 +606,26 @@
                 <div class="col-lg-2">
                     <h6 class="fw-bold mb-3">Dịch vụ</h6>
                     <ul class="list-unstyled">
-                        <li><a href="#" class="text-decoration-none">Trị mụn y khoa</a></li>
-                        <li><a href="#" class="text-decoration-none">Tắm trắng 5in1</a></li>
-                        <li><a href="#" class="text-decoration-none">Cấy collagen</a></li>
-                        <li><a href="#" class="text-decoration-none">Phun xăm thẩm mỹ</a></li>
+                        <li><a href="https://namperfume.net/pages/cach-thuc-mua-hang" target="_blank"
+                                class="text-decoration-none">Trị mụn y khoa</a></li>
+                        <li><a href="https://namperfume.net/pages/cach-thuc-mua-hang" target="_blank"
+                                class="text-decoration-none">Tắm trắng 5in1</a></li>
+                        <li><a href="https://namperfume.net/pages/cach-thuc-mua-hang" target="_blank"
+                                class="text-decoration-none">Cấy collagen</a></li>
+                        <li><a href="https://namperfume.net/pages/cach-thuc-mua-hang" target="_blank"
+                                class="text-decoration-none">Phun xăm thẩm mỹ</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3">
                     <h6 class="fw-bold mb-3">Hỗ trợ khách hàng</h6>
                     <ul class="list-unstyled">
-                        <li><a href="#" class="text-decoration-none">Đặt lịch tư vấn</a></li>
-                        <li><a href="#" class="text-decoration-none">Chính sách bảo hành</a></li>
-                        <li><a href="#" class="text-decoration-none">Quy trình dịch vụ</a></li>
-                        <li><a href="#" class="text-decoration-none">Liên hệ hỗ trợ</a></li>
+                        <li><a href="#newsletter" class="text-decoration-none">Đặt lịch tư vấn</a></li>
+                        <li><a href="https://namperfume.net/pages/cach-thuc-mua-hang" target="_blank"
+                                class="text-decoration-none">Chính sách bảo hành</a></li>
+                        <li><a href="https://namperfume.net/pages/cach-thuc-mua-hang" target="_blank"
+                                class="text-decoration-none">Quy trình dịch vụ</a></li>
+                        <li><a href="https://namperfume.net/pages/cach-thuc-mua-hang" target="_blank"
+                                class="text-decoration-none">Liên hệ hỗ trợ</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3">
