--- a/nuoc-hoa-unisex.html
+++ b/nuoc-hoa-unisex.html
@@ -710,18 +710,51 @@
     </section>
 
     <!-- Newsletter Section -->
-    <section class="newsletter-section py-5 bg-primary text-white">
+    <section id="newsletter" class="newsletter-section py-5 bg-primary text-white">
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-6">
-                    <h3 class="fw-bold mb-2">Đăng ký thành viên để nhận khuyến mãi</h3>
-                    <p class="mb-0">Nhận thông tin về sản phẩm mới và ưu đãi độc quyền dành cho nước hoa unisex</p>
+            <div class="row">
+                <div class="col-lg-5">
+                    <h3 class="fw-bold mb-3">🎁 ĐĂNG KÝ NHẬN ƯU ĐÃI VIP</h3>
+                    <p class="mb-4">Nhận thông tin khuyến mãi đặc biệt và ưu đãi độc quyền từ Iris Beauty. Đặt lịch tư
+                        vấn miễn phí ngay hôm nay!</p>
                 </div>
-                <div class="col-lg-6">
-                    <div class="input-group">
-                        <input type="email" class="form-control" placeholder="Nhập địa chỉ email của bạn">
-                        <button class="btn btn-light" type="button">Đăng ký</button>
-                    </div>
+                <div class="col-lg-7">
+                    <form class="newsletter-form">
+                        <div class="row g-3">
+                            <div class="col-md-6">
+                                <input type="text" class="form-control" placeholder="Tên của bạn" required>
+                            </div>
+                            <div class="col-md-6">
+                                <select class="form-select" required>
+                                    <option value="">Chọn dịch vụ quan tâm</option>
+                                    <option value="tri-mun">Trị mụn y khoa</option>
+                                    <option value="tam-trang">Tắm trắng 5in1</option>
+                                    <option value="cay-collagen">Cấy collagen</option>
+                                    <option value="phun-xam">Phun xăm thẩm mỹ</option>
+                                    <option value="nang-co">Nâng cơ mặt</option>
+                                    <option value="triet-long">Triệt lông laser</option>
+                                    <option value="khac">Dịch vụ khác</option>
+                                </select>
+                            </div>
+                            <div class="col-md-6">
+                                <select class="form-select" required>
+                                    <option value="">Thời gian phù hợp</option>
+                                    <option value="sang">Buổi sáng (8:30-12:00)</option>
+                                    <option value="chieu">Buổi chiều (13:00-17:00)</option>
+                                    <option value="toi">Buổi tối (17:30-19:30)</option>
+                                    <option value="cuoi-tuan">Cuối tuần</option>
+                                </select>
+                            </div>
+                            <div class="col-md-6">
+                                <input type="tel" class="form-control" placeholder="SĐT liên hệ" required>
+                            </div>
+                            <div class="col-12">
+                                <button type="submit" class="btn btn-light btn-lg w-100">
+                                    <i class="fas fa-calendar-check me-2"></i>📞 Đăng ký tư vấn miễn phí
+                                </button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
@@ -762,10 +795,14 @@
                 <div class="col-lg-3">
                     <h6 class="fw-bold mb-3">Dịch vụ khách hàng</h6>
                     <ul class="list-unstyled">
-                        <li><a href="#" class="text-decoration-none">Vận chuyển & Đổi trả</a></li>
-                        <li><a href="#" class="text-decoration-none">Hướng dẫn kích thước</a></li>
-                        <li><a href="#" class="text-decoration-none">Hướng dẫn bảo quản</a></li>
-                        <li><a href="#" class="text-decoration-none">Liên hệ hỗ trợ</a></li>
+                        <li><a href="https://namperfume.net/pages/cach-thuc-mua-hang" target="_blank"
+                                class="text-decoration-none">Cách thức mua hàng</a></li>
+                        <li><a href="https://namperfume.net/pages/cach-thuc-mua-hang" target="_blank"
+                                class="text-decoration-none">Hướng dẫn kích thước</a></li>
+                        <li><a href="https://namperfume.net/pages/cach-thuc-mua-hang" target="_blank"
+                                class="text-decoration-none">Hướng dẫn bảo quản</a></li>
+                        <li><a href="https://namperfume.net/pages/cach-thuc-mua-hang" target="_blank"
+                                class="text-decoration-none">Liên hệ hỗ trợ</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3">
