NƯỚC HOA link to web namperfume

--- a/index.html
+++ b/index.html
@@ -57,16 +57,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="shop.html">MỸ PHẨM</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="perfumeDropdown" role="button"
-                            data-bs-toggle="dropdown">
-                            NƯỚC HOA
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="nuoc-hoa-nam.html">Nước hoa nam</a></li>
-                            <li><a class="dropdown-item" href="nuoc-hoa-nu.html">Nước hoa nữ</a></li>
-                            <li><a class="dropdown-item" href="nuoc-hoa-unisex.html">Nước hoa unisex</a></li>
-                        </ul>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://namperfume.net/pages/cach-thuc-mua-hang" target="_blank">NƯỚC
+                            HOA</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">LIÊN HỆ</a>
