--- a/nuoc-hoa-nam.html
+++ b/nuoc-hoa-nam.html
@@ -56,16 +56,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="shop.html">MỸ PHẨM</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle active" href="#" id="perfumeDropdown" role="button"
-                            data-bs-toggle="dropdown">
-                            NƯỚC HOA
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item active" href="nuoc-hoa-nam.html">Nước hoa nam</a></li>
-                            <li><a class="dropdown-item" href="nuoc-hoa-nu.html">Nước hoa nữ</a></li>
-                            <li><a class="dropdown-item" href="nuoc-hoa-unisex.html">Nước hoa unisex</a></li>
-                        </ul>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="https://namperfume.net/pages/cach-thuc-mua-hang"
+                            target="_blank">NƯỚC HOA</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="index.html#contact">LIÊN HỆ</a>
