Tạo chính sách, chi tiết sản phẩm

--- a/index.html
+++ b/index.html
@@ -599,26 +599,19 @@
                 <div class="col-lg-2">
                     <h6 class="fw-bold mb-3">Dịch vụ</h6>
                     <ul class="list-unstyled">
-                        <li><a href="https://namperfume.net/pages/cach-thuc-mua-hang" target="_blank"
-                                class="text-decoration-none">Trị mụn y khoa</a></li>
-                        <li><a href="https://namperfume.net/pages/cach-thuc-mua-hang" target="_blank"
-                                class="text-decoration-none">Tắm trắng 5in1</a></li>
-                        <li><a href="https://namperfume.net/pages/cach-thuc-mua-hang" target="_blank"
-                                class="text-decoration-none">Cấy collagen</a></li>
-                        <li><a href="https://namperfume.net/pages/cach-thuc-mua-hang" target="_blank"
-                                class="text-decoration-none">Phun xăm thẩm mỹ</a></li>
+                        <li><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Trị mụn y khoa</a></li>
+                        <li><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Tắm trắng 5in1</a></li>
+                        <li><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Cấy collagen</a></li>
+                        <li><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Phun xăm thẩm mỹ</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3">
                     <h6 class="fw-bold mb-3">Hỗ trợ khách hàng</h6>
                     <ul class="list-unstyled">
                         <li><a href="#newsletter" class="text-decoration-none">Đặt lịch tư vấn</a></li>
-                        <li><a href="https://namperfume.net/pages/cach-thuc-mua-hang" target="_blank"
-                                class="text-decoration-none">Chính sách bảo hành</a></li>
-                        <li><a href="https://namperfume.net/pages/cach-thuc-mua-hang" target="_blank"
-                                class="text-decoration-none">Quy trình dịch vụ</a></li>
-                        <li><a href="https://namperfume.net/pages/cach-thuc-mua-hang" target="_blank"
-                                class="text-decoration-none">Liên hệ hỗ trợ</a></li>
+                        <li><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Chính sách bảo hành</a></li>
+                        <li><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Quy trình dịch vụ</a></li>
+                        <li><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Liên hệ hỗ trợ</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3">
