--- a/nuoc-hoa-unisex.html
+++ b/nuoc-hoa-unisex.html
@@ -788,14 +788,9 @@
                 <div class="col-lg-3">
                     <h6 class="fw-bold mb-3">Dịch vụ khách hàng</h6>
                     <ul class="list-unstyled">
-                        <li><a href="https://namperfume.net/pages/cach-thuc-mua-hang" target="_blank"
-                                class="text-decoration-none">Cách thức mua hàng</a></li>
-                        <li><a href="https://namperfume.net/pages/cach-thuc-mua-hang" target="_blank"
-                                class="text-decoration-none">Hướng dẫn kích thước</a></li>
-                        <li><a href="https://namperfume.net/pages/cach-thuc-mua-hang" target="_blank"
-                                class="text-decoration-none">Hướng dẫn bảo quản</a></li>
-                        <li><a href="https://namperfume.net/pages/cach-thuc-mua-hang" target="_blank"
-                                class="text-decoration-none">Liên hệ hỗ trợ</a></li>
+                        <li><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Hướng dẫn kích thước</a></li>
+                        <li><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Hướng dẫn bảo quản</a></li>
+                        <li><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Liên hệ hỗ trợ</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3">
