--- a/huong-dan-dat-hang.html
+++ b/huong-dan-dat-hang.html
@@ -53,8 +53,7 @@
                         <a class="nav-link" href="shop.html">Dịch Vụ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://namperfume.net/pages/cach-thuc-mua-hang" target="_blank">NƯỚC
-                            HOA</a>
+                        <a class="nav-link" href="shop.html">NƯỚC HOA</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#footer">Liên Hệ</a>
