--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
                         <a class="nav-link" href="shop.html">MỸ PHẨM</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://namperfume.net/pages/cach-thuc-mua-hang" target="_blank">NƯỚC
-                            HOA</a>
+                        <a class="nav-link" href="shop.html">NƯỚC HOA</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">LIÊN HỆ</a>
