--- a/shop.html
+++ b/shop.html
@@ -57,8 +57,7 @@
                         <a class="nav-link active" href="shop.html">MỸ PHẨM</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://namperfume.net/pages/cach-thuc-mua-hang" target="_blank">NƯỚC
-                            HOA</a>
+                        <a class="nav-link" href="shop.html">NƯỚC HOA</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="index.html#contact">LIÊN HỆ</a>
