--- a/shop.html
+++ b/shop.html
@@ -54,10 +54,10 @@
                         <a class="nav-link" href="index.html">SPA</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="shop.html">MỸ PHẨM</a>
+                        <a class="nav-link active" href="shop.html" target="_blank">MỸ PHẨM</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="shop.html">NƯỚC HOA</a>
+                        <a class="nav-link" href="shop.html" target="_blank">NƯỚC HOA</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="index.html#contact">LIÊN HỆ</a>
