--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
                         <a class="nav-link active" href="index.html">SPA</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="shop.html" target="_blank">MỸ PHẨM</a>
+                        <a class="nav-link" href="shopmypham.html" target="_blank">MỸ PHẨM</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="shop.html" target="_blank">NƯỚC HOA</a>
+                        <a class="nav-link" href="shopnuochoa.html" target="_blank">NƯỚC HOA</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">LIÊN HỆ</a>
