--- a/nuoc-hoa-nu.html
+++ b/nuoc-hoa-nu.html
@@ -54,11 +54,10 @@
                         <a class="nav-link" href="index.html">SPA</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="shop.html">MỸ PHẨM</a>
+                        <a class="nav-link" href="shopmypham.html" target="_blank">MỸ PHẨM</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="https://namperfume.net/pages/cach-thuc-mua-hang"
-                            target="_blank">NƯỚC HOA</a>
+                        <a class="nav-link active" href="shopnuochoa.html" target="_blank">NƯỚC HOA</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="index.html#contact">LIÊN HỆ</a>
