--- a/product-detail-nuoc-hoa.html
+++ b/product-detail-nuoc-hoa.html
@@ -50,10 +50,10 @@
                         <a class="nav-link" href="index.html">Trang Chủ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="shop.html" target="_blank">MỸ PHẨM</a>
+                        <a class="nav-link" href="shopmypham.html" target="_blank">MỸ PHẨM</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="shop.html" target="_blank">NƯỚC HOA</a>
+                        <a class="nav-link" href="shopnuochoa.html" target="_blank">NƯỚC HOA</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#footer">Liên Hệ</a>
